Fixing our kitchen title positioning on tablet

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -71,6 +71,10 @@ body {
 	}
 
 	#kitchen{
+		.title-container{
+			margin-left: auto;
+			margin-right: auto;
+		}
 		.kitchen-image{
 			width: 85%;
 			min-width: 85%;
